# GnssView

./: .clang-format  .gitignore  CMakeLists.txt  Info.plist  README.md  config.h.in  gnsstype.h  install.nsi  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nmeaparser.cpp  nmeaparser.h  udpserver.cpp  udpserver.h
.github/workflows/: macintosh.yml  macos.yml  windows.yml
app/: main.cpp
assets/: GnssView.icns  GnssView.rc
docs/: architecture.md  plugin-development.md  reference-notes.md
include/hdgnss/: GnssTypes.h  IAutomationPlugin.h  IConfigurablePlugin.h  IPluginMetadata.h  IPluginSettingsUi.h  IProtocolPlugin.h  ITecDataPlugin.h  ITransport.h  ITransportPlugin.h  TecTypes.h
installer/: GnssView.nsi
resources/: icon.icns  resources.qrc  style.qss
scripts/: build_windows_installer.ps1
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: AppController.cpp  AppController.h  AppSettings.cpp  AppSettings.h  AutomationPluginLoader.cpp  AutomationPluginLoader.h  BinaryProtocolRouter.cpp  BinaryProtocolRouter.h  BuiltinProtocolRegistry.cpp  BuiltinProtocolRegistry.h  FilePacketizer.cpp  FilePacketizer.h  PluginMetadata.h  ProtocolDispatcher.cpp  ProtocolDispatcher.h  ProtocolPluginLoader.cpp  ProtocolPluginLoader.h  StreamChunker.cpp  StreamChunker.h  TecPluginLoader.cpp  TecPluginLoader.h  TransportPluginLoader.cpp  TransportPluginLoader.h  TransportViewModel.cpp  TransportViewModel.h  UpdateChecker.cpp  UpdateChecker.h  commanddefinition.h  communicationmanager.cpp  communicationmanager.h  datalogger.cpp  datalogger.h  gnsstype.h  nmeaparser.cpp  nmeaparser.h  ntripclient.cpp  ntripclient.h  updatechecker.cpp  updatechecker.h
src/devices/: allystar.cpp  allystar.h  goldfish.cpp  goldfish.h  rtcm3.cpp  rtcm3.h  ublox.cpp  ublox.h
src/models/: CommandButtonModel.cpp  CommandButtonModel.h  DeviationMapModel.cpp  DeviationMapModel.h  RawLogModel.cpp  RawLogModel.h  SatelliteModel.cpp  SatelliteModel.h  SignalModel.cpp  SignalModel.h
src/platform/: MacWindowStyler.cpp  MacWindowStyler.h  MacWindowStyler_mac.mm
src/protocols/: GnssTypes.h  IProtocolPlugin.h  NmeaProtocolPlugin.cpp  NmeaProtocolPlugin.h
src/storage/: RawRecorder.cpp  RawRecorder.h
src/tec/: TecMapOverlayModel.cpp  TecMapOverlayModel.h  TecMapRenderer.cpp  TecMapRenderer.h  TecTypes.h
src/transports/: ITransport.cpp  ITransport.h  SerialTransport.cpp  SerialTransport.h  TcpClientTransport.cpp  TcpClientTransport.h  UdpServerTransport.cpp  UdpServerTransport.h
src/ui/: cmdbuttondialog.cpp  cmdbuttondialog.h  cmdbuttondialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/ui/qml/: Main.qml
src/ui/qml/components/: AutoTestPanel.qml  CommandButtonsPanel.qml  DataPanel.qml  DeviationMapPanel.qml  GlassPanel.qml  InstrumentToolTip.qml  NeonButton.qml  NeonTabBar.qml  NeonTabButton.qml  SettingsPanel.qml  SignalBarsPanel.qml  SkyViewPanel.qml  Theme.qml  TransportConfigPanel.qml  WorldLocationPanel.qml
src/utils/: ByteUtils.cpp  ByteUtils.h
tests/: GnssViewRegression.cpp  StreamChunkerRegression.cpp
